syntax = "proto3";

package userclient;

option go_package = "./user";

// WxLogin
message WxLoginRequest {
  string Username = 1;
  string WxUid = 2;
}

message WxLoginResponse {
  UserInfo UserInfo = 1;
}

message UserInfo {
  int32 PostCount = 1;
  string School = 2;
  int32 Grade = 3;
  string Avatar = 4;
  string Introduction = 5;
  string Username = 6;
}

// SetUserBaseInfo
message SetUserBaseInfoRequest {
  string WxUid = 1;
  string School = 2;
  int32 Grade = 3;
}

message SetUserBaseInfoResponse {
}

// GetUserBaseInfo
message GetUserBaseInfoRequest {
}

message GetUserBaseInfoResponse {
  string School = 1;
  int32 Grade = 2;
  string Username = 3;
}

// SetUserExtraInfo
message SetUserExtraInfoRequest {
  string WxUid = 1;
  string Introduction = 2;
}

message SetUserExtraInfoResponse {
}

// GetUserExtraInfo
message GetUserExtraInfoRequest {
}

message GetUserExtraInfoResponse {
  string Introduction = 1;
  int32 PostCount = 2;
}

service User {
  rpc WxLogin(WxLoginRequest) returns(WxLoginResponse);
  rpc SetUserBaseInfo(SetUserBaseInfoRequest) returns(SetUserBaseInfoResponse);
  rpc GetUserBaseInfo(GetUserBaseInfoRequest) returns(GetUserBaseInfoResponse);
  rpc SetUserExtraInfo(SetUserExtraInfoRequest) returns(SetUserExtraInfoRequest);
  rpc GetUserExtraInfo(GetUserExtraInfoRequest) returns(GetUserExtraInfoRequest);
}